# rayca

./: .gitignore  .gitmodules  0.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html
.github/workflows/: ci.yml
rayca-demo/: Cargo.toml
rayca-demo/src/: ctx.rs  main.rs  shader.wgsl
rayca-geometry/: Cargo.toml  README.md
rayca-geometry/src/: geometry.rs  lib.rs  line.rs  sphere.rs  triangle.rs  vertex.rs
rayca-graphics/: Cargo.toml
rayca-graphics/shader/: compute.wgsl
rayca-graphics/src/: ctx.rs  lib.rs
rayca-graphics/src/step/: compute_step.rs  mod.rs  present_step.rs
rayca-math/: Cargo.toml  README.md
rayca-math/src/: lib.rs  mat3.rs  mat4.rs  ops.rs  point3.rs  quat.rs  ray.rs  size2.rs  trs.rs  vec2.rs  vec3.rs  vec4.rs
rayca-math/src/color/: mod.rs  rgb8.rs  rgba32f.rs  rgba8.rs
rayca-model/: Cargo.toml
rayca-model/src/: buffer.rs  camera.rs  gltf_loader.rs  image.rs  info.rs  lib.rs  light.rs  material.rs  mesh.rs  model.rs  node.rs  primitive.rs  sampler.rs  scene.rs  script.rs  texture.rs
rayca-model/src/light/: directional.rs  mod.rs  point.rs  quad.rs
rayca-model/src/loader/: gltf.rs  mod.rs  sdtf.rs
rayca-model/src/material/: ggx.rs  mod.rs  pbr.rs  phong.rs
rayca-soft/: Cargo.toml
rayca-soft/.cargo/: config.toml
rayca-soft/src/: camera.rs  config.rs  draw.rs  ggx.rs  hit.rs  image.rs  lib.rs  log.rs  mesh.rs  model.rs  node.rs  sampler.rs  scene.rs  test.rs  texture.rs  util.rs
rayca-soft/src/brdf/: ggx.rs  lambertian.rs  mod.rs
rayca-soft/src/bvh/: aabb.rs  blas.rs  mod.rs  primitive.rs  range.rs  sphere.rs  structure.rs  tlas.rs  triangle.rs
rayca-soft/src/integrator/: analyticdirect.rs  direct.rs  flat.rs  mod.rs  pathtracer.rs  raytracer.rs  scratcher.rs
rayca-soft/src/math/: mat3.rs  mod.rs  ops.rs  point3.rs  ray.rs
rayca-soft/src/sampler/: brdf.rs  cosine.rs  hemisphere.rs  mis.rs  mod.rs  nee.rs  sample.rs
rayca-soft/src/www/: context.rs
rayca-soft/tests/: gltf.rs  sdtf.rs  test.rs  tests.rs  web.rs
rayca-soft/www/: .gitignore  CNAME  gltf-model.ts  index.html  index.js  index.ts  package.json  tsconfig.json  webpack.config.js  worker.ts
rayca-util/: Cargo.toml  README.md
rayca-util/src/: asset.rs  bytes.rs  lib.rs  logging.rs  pack.rs  tests.rs  timer.rs
scripts/: download-web-assets.sh  list-big-files.sh  nightly.sh  remove-file-from-history.sh
src/: bvh.rs  camera.rs  config.rs  context.rs  draw.rs  image.rs  lib.rs  light.rs  log.rs  material.rs  math.rs  mesh.rs  model.rs  node.rs  png.rs  ray.rs  sampler.rs  scene.rs  sphere.rs  texture.rs  triangle.rs  util.rs  vertex.rs
src/bvh/: bvh.rs  light.rs  mod.rs  primitive.rs  sphere.rs  structure.rs  triangle.rs
src/geometry/: mod.rs  sphere.rs  triangle.rs  triangles.rs  vertex.rs
src/integrator/: mod.rs  scratcher.rs
src/material/: ggx.rs  mod.rs
src/math/: bvh.rs  color.rs  mat3.rs  mat4.rs  mod.rs  point3.rs  quat.rs  ray.rs  trs.rs  vec2.rs  vec3.rs
src/math/color/: mod.rs  rgb8.rs  rgba8.rs
src/model/: camera.rs  image.rs  light.rs  mod.rs  node.rs  sampler.rs  texture.rs
src/model/tf/: mesh.rs  mod.rs  spheres.rs  triangles.rs  vertex.rs
src/www/: context.rs  mod.rs
tests/: box.gltf  suzanne.gltf  test.rs  triangle.gltf  web.rs
tests/cameras/: cameras.gltf
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
