[package]
name = "rayca"
version = "0.4.1"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"
description = "Experimental project which purpose is to learn and apply graphics rendering algorithms such as raytracing"
repository = "https://github.com/fahien/rayca"

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gltf = "1.0.0"
num-traits = "0.2.15"
owo-colors = { version = "3.4.0", features = ["supports-colors"] }
png = "0.17.5"
jpeg-decoder = "0.2.6"
base64 = "0.13.0"

# Parallel dependencies
rayon = { version = "1.5.3", optional = true }

# Web dependencies
wasm-bindgen = { version = "0.2.81", optional = true }
wasm-bindgen-futures = { version = "0.4.31", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"], optional = true }
js-sys = { version = "0.3.58", optional = true }
web-sys = { version = "0.3.58", features = [
        "console",
        "Window",
        "Document",
        "Performance",
        "HtmlCanvasElement",
        "CanvasRenderingContext2d",
        "ImageData",
        'Headers',
        'Request',
        'RequestInit',
        'RequestMode',
        'Response',
    ], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.31"

[features]
default = ["parallel"]
parallel = ["rayon"]
web = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "console_error_panic_hook",
    "instant",
    "js-sys",
    "web-sys",
]
