[package]
name = "rayca-demo"
version = "0.0.1"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2024"
license = "MIT"
description = "Graphical demo application for the Rayca renderer."
repository = "https://github.com/fahien/rayca"

[dependencies]
rayca-soft = { path = "../rayca-soft" }
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
