[package]
name = "rayca-graphics"
version = "0.0.1"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/fahien/rayca"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies]
rayca-soft = { path = "../rayca-soft" }
wgpu = "26.0.1"
winit = "0.30.12"
