[package]
name = "rayca-math"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "A collection of mathematical types and functions for ray tracing in Rust."
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "0.2.*"
fastrand = "2.*"
serde = { version = "1.0.*", features = [ "serde_derive" ] }
serde_json = "1.0.*"
