[package]
name = "rayca-soft"
version = "0.4.1"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"
description = "Experimental project which purpose is to learn and apply graphics rendering algorithms such as raytracing"
repository = "https://github.com/fahien/rayca"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies]
rayca-util = { path = "../rayca-util" }
rayca-math = { path = "../rayca-math" }
rayca-geometry = { path = "../rayca-geometry" }
rayca-model = { path = "../rayca-model" }
gltf = "1.0.0"
num-traits = "0.2.*"
png = "0.17.7"
rayon = "1.10.*"
base64 = "0.13.1"
jpeg-decoder = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1.12"

# Web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-rayon = "1.3.*"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3.60"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
    "CanvasRenderingContext2d",
    "console",
    "Document",
    "ImageData",
    "Headers",
    "HtmlCanvasElement",
    'OffscreenCanvas',
    "WebGl2RenderingContext",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlRenderbuffer",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
