[package]
name = "rayca-util"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
license = "MIT"
readme = "README.md"

[dependencies]
instant = "0.1.*"
winit = { version = "0.30.*", features = [ "android-native-activity" ] }
serde = { version = "1.0.*", features = [ "serde_derive" ] }
serde_json = "1.0.*"
log = "0.4"
env_logger = "0.11"
console_log = { version = "1", features = ["color"] }
